# sibila

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  build_docs.sh  builddocs.sh  credits.txt  index.html  mkdocs.yml  objects.inv  out.json  pyproject.toml  run_flake8.sh  run_mypy.sh  run_prerelease.sh  run_validate.sh  setup.py  sitemap.xml
api-reference/: index.html
api-reference/changelog/: index.html
api-reference/generation/: index.html
api-reference/local_model/: index.html
api-reference/model/: index.html
api-reference/models/: index.html
api-reference/multigen/: index.html
api-reference/remote_model/: index.html
api-reference/thread/: index.html
api-reference/tokenizer/: index.html
api-reference/tools/: index.html
async/: index.html
chat_templates/: index.html
docs/: api-reference.md  async.md  chat_templates.md  first_run.md  getting-started.md  index.md  installing.md  setup-local-models.md  thread.md  tips.md  tools.md  what.md
docs/api-reference/: generation.md  local_model.md  model.md  models.md  multigen.md  remote_model.md  thread.md  tokenizer.md  tools.md
docs/examples/: async.md  cli.md  compare.md  extract.md  extract_dataclass.md  from_text_to_object.md  hello_model.md  index.md  interact.md  quick_meeting.md  receipt.md  simple_tools.md  tag.md  tough_meeting.md
docs/extract/: dataclass.md  enums.md  free_json.md  free_text.md  pydantic.md  simple_types.md
docs/models/: anthropic.md  find_local_models.md  fireworks.md  formats_json.md  groq.md  local_model.md  mistral.md  models_factory.md  models_json.md  (+6 more)
examples/: index.html  readme.md  sentiment.csv
first_run/: index.html
getting-started/: index.html
how-to/: index.html
installing/: index.html
models/: formats.json  modeldir.json  models.json  readme.md
search/: search_index.json
setup-local-models/: index.html
sibila/: __init__.py  anthropic.py  base_formatdir.json  base_formats.json  base_modeldir.json  base_models.json  cli.py  context.py  dictype.py  formatdir.py  gen.py  json_grammar.py  json_schema.py  json_utils.py  llamacpp.py  mistral.py  model.py  modeldir.py  models.py  multigen.py  null.py  openai.py  schema_format_openai.py  text_splitter.py  thread.py  tools.py  utils.py
tests/: conftest.py  readme.md  test_anthropic_claude-3-haiku.py  test_anthropic_claude_3_haiku.py  test_anthropic_claude_3_haiku_images.py  test_cli.py  test_common_llamacpp.py  test_common_llamacpp_examples.py  test_common_remote.py  test_common_remote_examples.py  test_examples_tinyllama.py  test_extract.py  test_fireworks_mixtral.py  test_formats.py  test_json_schema.py  test_llamacpp.py  test_llamacpp_models.py  test_llamacpp_models_dir.py  test_llamacpp_tinyllama.py  test_mistral_small.py  test_mixtral_mistral_small.py  test_null_extract.py  test_openai_gpt35.py  test_openai_gpt4.py  test_openai_gpt4o_image.py  test_pydantic_dataclass.py  test_thread.py  test_together_mixtral.py  utils.py
thread/: index.html
tips/: index.html
tools/: index.html
what/: index.html
(+94 files in other folders)
