[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'sibila'
description='Structured queries from local or online LLM models'
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jorge Diogo", email = "jndiogo@gmail.com" },
]
keywords = [
    "llama.cpp",
    "AI",
    "Transformers",
    "GPT"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "llama-cpp-python",
    "jinja2",
    "typing_extensions",
    "jsonschema",
    "openai",
    "tiktoken",
    "pydantic",
]
dynamic = ["version"]


[tool.setuptools]
packages = ["sibila"]

[tool.setuptools.dynamic]
version = {attr = "sibila.__version__"}

[project.urls]
Homepage = "https://github.com/jndiogo/sibila"
Documentation = "https://jndiogo.github.io/sibila"
Issues = "https://github.com/jndiogo/sibila/issues"
